--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p class="course-description">Level up your web styling expertise with our easy to understand CSS fundametals
             course
         </p>
-        <a class="course-link" href="https://www.almdrasa.com">Start here</a>
+        <a class="course-link" href="#">Start here</a>
         <h4 class="course-roadmap-title">Roadmap</h4>
         <ul class="course-roadmap-list">
             <li class="course-roadmap-item course-html">HTML</li>
